[package]
name = "merkle_hash"
version = "1.0.3"
edition = "2021"
authors = ["Hristo_Gochev"]
description = "Finds the blake3 hash of files or entire directories using a multithreaded merkle tree algorithm."
license = "MIT"
documentation = "https://docs.rs/merkle_hash/"
homepage = "https://github.com/HristoGochevPersonal/merkle_hash"
repository = "https://github.com/HristoGochevPersonal/merkle_hash"
readme = "README.md"
keywords = ["hash", "directory", "merkle", "blake3", "multithreading"]
categories = ["algorithms","cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
blake3 = "1.3.1"
walkdir = "2.3.2"