[package]
name = "merkle_hash"
version = "2.1.0"
edition = "2021"
authors = ["hristo-gochev"]
description = "Finds the hashes of all files and directories in a directory tree."
license = "MIT"
documentation = "https://docs.rs/merkle_hash/"
homepage = "https://github.com/hristo-gochev/merkle_hash"
repository = "https://github.com/hristo-gochev/merkle_hash"
readme = "README.md"
keywords = ["hash", "hashing", "file", "directory", "tree"]
categories = ["algorithms", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
blake3 = "1"
walkdir = "2"
anyhow = "1"
camino = "1"