[package]
name = "merkle_hash"
version = "3.6.1"
edition = "2021"
authors = ["hristogochev"]
description = "Finds the hashes of all files and directories in a directory tree."
license = "MIT"
documentation = "https://docs.rs/merkle_hash/"
homepage = "https://github.com/hristogochev/merkle_hash"
repository = "https://github.com/hristogochev/merkle_hash"
readme = "README.md"
keywords = ["hash", "checksum", "file", "directory", "tree"]
categories = ["algorithms", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1", optional = true }
blake3 = "1"
anyhow = "1"
camino = { version = "1", optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

[features]
default = ["parallel", "encode"]
parallel = ["rayon"]
#camino = ["camino"]
sha = ["sha2"]
retain = []
encode = []
